--- a/mainsequence/reportbuilder/templates/base_template.html
+++ b/mainsequence/reportbuilder/templates/base_template.html
@@ -4,7 +4,7 @@
   <meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>{{ title }}</title>
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css' rel='stylesheet'>
-  <style>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> <style>
     body,html{margin:0;padding:0;width:100%;background:#e0e0e0;font-family:{{ font_family }};font-size:{{ base_font_size }}px;}
     body {
       display: flex; /* Use flexbox to center content */
